# ecoprimers

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  data.db-journal  docker-compose.yml  fly.toml  migrate.bat  package.json  pyproject.toml  requirements.txt  setup.bat  setup.sh  start.bat  vercel.json  wrangler.json
.github/workflows/: deploy.yml  production.yml
migrations/versions/: d4db3833ac20_.py
scripts/: setup.bat  setup.ps1  start.bat  start.ps1
src/: ai.py  api.py  api_routes.py  app.py  database.py  environment.py  gunicorn.py  main.py  models.py  routes.py  server.ts  utils.py
src-worker/: .gitignore  index.ts  package.json  pnpm-lock.yaml  wrangler.json  wrangler.jsonc
src/App/: __init__.py  routes.py
src/app/: .dockerignore  .gitignore  Dockerfile  data.db  login_authentication.py  main.py  pyproject.toml  routes.py  utils.py
src/app/lib/: ai.py  google.py  models.py  socket.py  storage.py
src/app/routing/: admin.py  admin_api.py  auth.py  chat_api.py  community.py  engagement.py  messaging.py  profile.py
src/app/static/css/: fun-dark.css  globals.css
src/app/static/js/: messages.js
src/app/static/prompts/: customer-service.txt  generate-users.txt
src/app/templates/: base.html  community-edit.html  community-new.html  dashboard.html  deleted_messages.html  donation.html  event-details.html  events.html  home.html  messaging.html  news.html  points.html  profile-edit.html  profile-followers.html  profile.html  reset-password.html  rewards.html  search-results.html  signup.html  tasks-verify-status.html  transactions.html
src/app/templates/admin/: advanced.html  base.html  events.html  products-manage.html  products.html  tasks-manage.html  tasks.html  transactions-delete.html  users-delete.html  users-manage.html  users-new.html  users.html
src/app/templates/components/: navigation.html  toast.html
src/lib/: ai.py  database.py  enums.py  google.py  models.py  payments.py  socket.py  storage.py
src/routing/: admin.py  admin_api.py  auth.py  chat.py  chat_api.py  community.py  engagement.py  messaging.py  messaging_api.py  profile.py
(+109 files in other folders)
