[project]
name = "ecoprimers"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "authlib",
  "flask",
  "flask-socketio",
  "flask-sqlalchemy",
  "gunicorn",
  "matplotlib",
  "newsapi-python",
  "openai",
  "openmeteo-requests",
  "openmeteo-sdk",
  "pandas",
  "pillow",
  "plotly",
  "psycopg2",
  "python-dotenv",
  "seaborn",
  "sendgrid",
  "sqlalchemy-libsql",
  "stripe",
  "xlsxwriter",
]
